# feat_eng_sprak

./: .gitignore  LICENSE  README.md  pyproject.toml  session-ses_29db.md
examples/: __init__.py  adult_census_pipeline.py  download_adult_census.py
openspec/: config.yaml
openspec/changes/archive/2026-04-06-phase1-foundation-imputation/: archive-report.md  design.md  proposal.md  tasks.md  verify-report.md
openspec/changes/archive/2026-04-12-phase2-encoding-discretisation/: tasks.md  (+2 more)
openspec/changes/phase2-encoding-discretisation/: design.md  proposal.md  tasks.md  verification.md
openspec/changes/phase4-creation/: design.md  proposal.md  tasks.md
openspec/changes/phase5-selection-core-filters/: design.md  proposal.md  tasks.md
openspec/changes/phase6-selection-advanced-methods/: design.md  proposal.md  tasks.md
openspec/specs/foundation/: spec.md
openspec/specs/imputation/: spec.md
src/spark_feature_engine/: __init__.py  _validation.py  base.py
src/spark_feature_engine/creation/: __init__.py  cyclical_features.py  math_features.py  relative_features.py
src/spark_feature_engine/discretisation/: __init__.py  arbitrary.py  equal_frequency.py  equal_width.py
src/spark_feature_engine/encoding/: __init__.py  count_frequency.py  one_hot.py  ordinal.py  rare_label.py
src/spark_feature_engine/imputation/: __init__.py  arbitrary_number.py  categorical.py  drop_missing_data.py  mean_median.py
src/spark_feature_engine/outliers/: __init__.py  outlier_trimmer.py  winsorizer.py
src/spark_feature_engine/selection/: __init__.py  _shared.py  drop_constant_features.py  drop_correlated_features.py  drop_duplicate_features.py  drop_features.py  drop_psi_features.py  information_value.py  probe_feature_selection.py  recursive_feature_addition.py  recursive_feature_elimination.py  shuffle_features.py  single_feature_performance.py  smart_correlated_selection.py  target_mean_selection.py
src/spark_feature_engine/transformation/: __init__.py  log_transformer.py  power_transformer.py
tests/: conftest.py  test_base_transformer.py  test_package_setup.py  test_phase2_validation_helpers.py  test_phase3_validation_helpers.py  test_phase4_validation_helpers.py  test_phase5_validation_helpers.py  test_phase6_validation_helpers.py
tests/creation/: test_cyclical_features.py  test_math_features.py  test_relative_features.py
tests/discretisation/: test_arbitrary.py  test_equal_frequency.py  test_equal_width.py
tests/encoding/: test_count_frequency.py  test_one_hot.py  test_ordinal.py  test_rare_label.py
tests/examples/: conftest.py  test_adult_census_pipeline.py  test_download_adult_census.py
tests/imputation/: test_arbitrary_number.py  test_categorical.py  test_drop_missing_data.py  test_mean_median.py
tests/outliers/: test_outlier_trimmer.py  test_winsorizer.py
tests/selection/: test_drop_constant_features.py  test_drop_correlated_features.py  test_drop_duplicate_features.py  test_drop_features.py  test_drop_psi_features.py  test_information_value.py  test_probe_feature_selection.py  test_recursive_feature_addition.py  test_recursive_feature_elimination.py  test_shuffle_features.py  test_single_feature_performance.py  test_smart_correlated_selection.py  test_target_mean_selection.py
tests/transformation/: test_log_transformer.py  test_power_transformer.py
(+13 files in other folders)
