[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spark-feature-engine"
version = "0.1.0"
description = "PySpark-native feature engineering transformers built on the Spark ML API"
readme = "README.md"
requires-python = ">=3.10"
license = "BSD-3-Clause"
authors = [{name = "spark_feature_engine contributors"}]
dependencies = [
    "altair>=6.1.0",
    "narwhals>=2.20.0",
    "nbformat>=5.10.4",
    "pyarrow>=24.0.0",
    "pyspark>=3.5",
    "vegafusion>=2.0.3",
    "vl-convert-python>=1.9.0.post1",
]

[project.optional-dependencies]
dev = [
  "numpy>=2.2.6",
  "build>=1.2",
  "marimo>=0.11",
  "pytest>=8",
  "ruff>=0.6",
  "mypy>=1.10",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["spark_feature_engine*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
python_files = ["test_*.py"]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["pyspark.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true

[tool.spark_feature_engine.quality]
format = "ruff format ."
lint = "ruff check ."
typecheck = "mypy src tests"
test = "pytest"
